Modify advertisement details and questionnaire link
Updated advertisement text and video source. Changed questionnaire link to a new Google Form.

--- a/index.html
+++ b/index.html
@@ -27,21 +27,23 @@
 <body>
 
   <h2>Advertisement Viewing</h2>
-  <p>Please watch the advertisement carefully.  
-     The questionnaire will appear after the video.</p>
+  <p>
+    Please watch the following advertisement carefully.
+    The questionnaire will appear after the video finishes.
+  </p>
 
-  <!-- 广告视频 -->
+  <!-- AB 广告视频 -->
   <video id="adVideo" controls>
-    <source src="SCfair - trial C.mp4" type="video/mp4">
+    <source src="SCfair - trial A,B.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
 
-  <!-- Google Form -->
+  <!-- AB 问卷（你刚确认的链接） -->
   <div id="survey">
     <h2>Questionnaire</h2>
 
     <iframe
-      src="https://docs.google.com/forms/d/e/1FAIpQLSdC3uLMfNi5OsCbzgMT-XlVQlxqCuDwtEDpsxCT9u4cwBoGiQ/viewform?embedded=true"
+      src="https://docs.google.com/forms/d/e/1FAIpQLScILdjmGSTm9vnTylulWszS_4p_PB0bkfo9B8qH1fISnZRDEw/viewform?embedded=true"
       width="640"
       height="1200"
       frameborder="0"
@@ -62,3 +64,4 @@
   </script>
 
 </body>
+</html>
